# vetis

./: .commitlintrc.yaml  .pre-commit-config.yaml  BENCHMARKS.md  Cargo.toml  README.md  dist-workspace.toml
.cargo/: config.toml
.samoyed/: commit-msg  pre-commit
certs/: README.md
docs/: _config.yml  benchmarks.md  benchmarks.rd  configuration.md  index.md  llms.txt  standalone-server.md  vetis-compio.md  vetis-macros.md  vetis-smol.md  vetis-tokio.md  vetis.md
examples/simple/: Cargo.toml
examples/simple/src/: main.rs
examples/simple/wix/: main.wxs
extras/vetis-fcgi/: Cargo.toml
extras/vetis-interface/: Cargo.toml
extras/vetis-interface/src/: lib.rs
extras/vetis-static/: Cargo.toml
extras/vetis-static/src/: lib.rs
interfaces/vetis-sapi/: Cargo.toml
interfaces/vetis-sapi/src/: lib.rs
vetis/: Cargo.toml  Dockerfile  Dockerfile.php  Dockerfile.python  Dockerfile.ruby  README.md
vetis-asgi/: Cargo.toml
vetis-asgi/src/: lib.rs
vetis-compio/: Cargo.toml  README.md
vetis-compio/src/: lib.rs  main.rs  rt.rs  tls.rs
vetis-compio/src/auth/: basic_auth.rs
vetis-compio/src/listener/: tcp.rs  udp.rs
vetis-compio/src/tests/: auth.rs  config.rs  lib.rs  mod.rs  server.rs  tls.rs  virtual_host.rs
vetis-compio/src/tests/paths/: handler.rs
vetis-compio/src/virtual_host/: mod.rs  path.rs
vetis-core/: Cargo.toml
vetis-core/src/: lib.rs
vetis-core/src/interface/: mod.rs
vetis-fcgi/: Cargo.toml
vetis-macros/: Cargo.toml  README.md
vetis-macros/src/: lib.rs
vetis-macros/src/parsers/: http.rs  mod.rs  security.rs  status_pages.rs
vetis-macros/tests/: mod.rs
vetis-rack/: Cargo.toml
vetis-rack/src/: lib.rs
vetis-rsgi/: Cargo.toml
vetis-sapi/: Cargo.toml
vetis-sapi/src/: lib.rs
vetis-scgi/: Cargo.toml
vetis-smol/: Cargo.toml  Dockerfile.ruby  README.md
vetis-smol/src/: lib.rs  macros.rs  main.rs  rt.rs  server.rs  tls.rs
vetis-smol/src/auth/: mod.rs
vetis-smol/src/http/: mod.rs
vetis-smol/src/listener/: mod.rs  tcp.rs  udp.rs
vetis-smol/src/rt/: mod.rs
vetis-smol/src/server/: mod.rs  tls.rs
vetis-smol/src/server/conn/listener/: mod.rs  tcp.rs  udp.rs
vetis-smol/src/server/http/: mod.rs
vetis-smol/src/server/virtual_host/: mod.rs
vetis-smol/src/server/virtual_host/path/auth/: basic_auth.rs
vetis-smol/src/server/virtual_host/path/interface/: mod.rs
vetis-smol/src/server/virtual_host/path/proxy/: mod.rs
vetis-smol/src/tests/: auth.rs  config.rs  http.rs  lib.rs  macros.rs  mod.rs  rt.rs  server.rs  tls.rs  virtual_host.rs
vetis-smol/src/tests/paths/: handler.rs  mod.rs  path.rs  reverse_proxy.rs
vetis-smol/src/tests/paths/interface/: wsgi.rs
vetis-smol/src/virtual_host/: mod.rs  path.rs
vetis-smol/src/virtual_host/path/: mod.rs
vetis-smol/src/virtual_host/path/auth/: mod.rs
vetis-smol/src/virtual_host/path/interface/: mod.rs
vetis-smol/src/virtual_host/path/static_files/: mod.rs
vetis-smol/tests/: mod.rs
vetis-smol/tests/common/: mod.rs
vetis-smol/tests/vetis_macros/: mod.rs
vetis-tokio/: Cargo.toml  README.md
vetis-tokio/src/: lib.rs  macros.rs  main.rs  rt.rs  tls.rs
vetis-tokio/src/http/: mod.rs
vetis-tokio/src/listener/: mod.rs  tcp.rs  udp.rs
vetis-tokio/src/server/: mod.rs  tls.rs
vetis-tokio/src/server/http/: mod.rs
vetis-tokio/src/server/listener/: mod.rs  tcp.rs  udp.rs
vetis-tokio/src/server/virtual_host/: mod.rs
vetis-tokio/src/server/virtual_host/path/: mod.rs
vetis-tokio/src/server/virtual_host/path/interface/: mod.rs
vetis-tokio/src/server/virtual_host/path/proxy/: mod.rs
vetis-tokio/src/server/virtual_host/path/static_files/: mod.rs
vetis-tokio/src/tests/: auth.rs  config.rs  http.rs  lib.rs  macros.rs  mod.rs  server.rs  tls.rs  virtual_host.rs
vetis-tokio/src/tests/paths/: handler.rs  mod.rs  reverse_proxy.rs  static_files.rs
vetis-tokio/src/tests/paths/interface/: wsgi.rs
vetis-tokio/src/virtual_host/: mod.rs  path.rs
vetis-tokio/src/virtual_host/path/: mod.rs
vetis-tokio/src/virtual_host/path/auth/: mod.rs
vetis-tokio/src/virtual_host/path/interface/: mod.rs
vetis-tokio/src/virtual_host/path/proxy/: mod.rs
vetis-tokio/src/virtual_host/path/static_files/: mod.rs
vetis-tokio/tests/common/: mod.rs
vetis-tokio/tests/vetis_macros/: mod.rs
vetis-wsgi/: Cargo.toml
vetis/src/: auth.rs  base.rs  cache.rs  config.rs  errors.rs  fs.rs  lib.rs  listener.rs  main.rs  request.rs  response.rs  security.rs  server.rs
vetis/src/config/server/: mod.rs
vetis/src/config/server/virtual_host/: mod.rs
vetis/src/config/server/virtual_host/path/: auth.rs  interface.rs  proxy.rs  static_files.rs
vetis/src/http/: mod.rs  request.rs  response.rs
vetis/src/server/: auth.rs  http.rs  mod.rs  path.rs  tls.rs  virtual_host.rs
vetis/src/server/conn/listener/: mod.rs  tcp.rs  udp.rs
vetis/src/server/http/: mod.rs  request.rs  response.rs
vetis/src/server/virtual_host/: mod.rs
vetis/src/server/virtual_host/path/: mod.rs
vetis/src/server/virtual_host/path/auth/: basic_auth.rs
vetis/src/server/virtual_host/path/interface/: mod.rs
vetis/src/server/virtual_host/path/interface/php/: mod.rs
vetis/src/server/virtual_host/path/interface/php/fcgi/: mod.rs
vetis/src/server/virtual_host/path/interface/php/sapi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/asgi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/rsgi/: mod.rs
vetis/src/server/virtual_host/path/interface/python/wsgi/: callback.rs  mod.rs
vetis/src/server/virtual_host/path/interface/ruby/: mod.rs
vetis/src/server/virtual_host/path/proxy/: mod.rs
vetis/src/server/virtual_host/path/static_files/: mod.rs
vetis/src/tests/: auth.rs  config.rs  listener.rs  mod.rs  paths.rs  request.rs  response.rs  security.rs  server.rs  tls.rs  virtual_host.rs
vetis/src/tests/paths/: handler.rs  static_files.rs
vetis/src/tests/paths/interface/: mod.rs  wsgi.rs
vetis/src/utils/: date.rs  mod.rs  serde.rs
vetis/src/virtual_host/: mod.rs  path.rs
vetis/src/virtual_host/path/: interface.rs  mod.rs  proxy.rs  static_files.rs
vetis/wix/: main.wxs
(+43 files in other folders)
