[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
  "vetis",
  "vetis-macros",
  "vetis-smol",
  "vetis-tokio",
  "examples/simple",
  # "extras/vetis-interface",
  # "extras/vetis-proxy",
  # "extras/vetis-static",
  # "extras/vetis-asgi",
  # "extras/vetis-fcgi",
  # "extras/vetis-rack",
  # "extras/vetis-rsgi",
  # "extras/vetis-sapi",
  # "extras/vetis-scgi",
  # "extras/vetis-wsgi",
]

[workspace.dependencies]
vetis = { path = "vetis" }
vetis-macros = { path = "vetis-macros" }
vetis-smol = { path = "vetis-smol" }
vetis-tokio = { path = "vetis-tokio" }
# vetis-interface = { path = "extras/vetis-interface" }
# vetis-proxy = { path = "extras/vetis-proxy" }
# vetis-static = { path = "extras/vetis-static" }
# vetis-asgi = { path = "extras/vetis-asgi" }
# vetis-fcgi = { path = "extras/vetis-fcgi" }
# vetis-rack = { path = "extras/vetis-rack" }
# vetis-rsgi = { path = "extras/vetis-rsgi" }
# vetis-sapi = { path = "extras/vetis-sapi" }
# vetis-scgi = { path = "extras/vetis-scgi" }
# vetis-wsgi = { path = "extras/vetis-wsgi" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
