[workspace]
# Use the latest resolver available
resolver = "3"
# Include both parts of the library in the workspace
members = [
  "vetis",
  "vetis-macros",
  "vetis-smol",
  "vetis-tokio",
  #"examples/simple"
]

[workspace.package]
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
edition = "2021"
repository = "https://github.com/vetis-server/vetis"
homepage = "https://github.com/vetis-server/vetis"
license = "MIT OR Apache-2.0"
rust-version = "1.75.0"

[workspace.dependencies]
vetis = { path = "vetis", version = "0.1.4-beta.9" }
vetis-macros = { path = "vetis-macros", version = "0.1.1-beta.2" }
vetis-smol = { path = "vetis-smol", version = "0.1.0-beta.4" }
vetis-tokio = { path = "vetis-tokio", version = "0.1.0-beta.4" }

[profile.release]
strip = true
opt-level = "z"
lto = true
codegen-units = 1
panic = "abort"

# The profile that 'dist' will build with
[profile.dist]
inherits = "release"
lto = "thin"
