[package]
name = "vetis-macros"
version = "0.1.0-beta.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server macros"
readme.workspace = true
license.workspace = true
keywords = ["http", "networking", "macros"]
publish = true
rust-version.workspace = true

[dependencies]
vetis = { workspace = true }

[dev-dependencies]
vetis-smol = { workspace = true }
