[package]
name = "vetis-macros"
version = "0.1.1-beta.2"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server macros"
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "macros"]
publish = true
rust-version.workspace = true

[dependencies]
vetis = { workspace = true }

[dev-dependencies]
tokio = { version = "1.52.3", features = ["macros", "rt-multi-thread"] }
vetis-tokio.workspace = true
