[package]
name = "vetis-smol"
version = "0.1.0-beta.1"
edition = "2021"
authors = ["Rogerio Araújo <rogerio.araujo@gmail.com>"]
repository = "https://github.com/ararog/vetis"
homepage = "https://github.com/ararog/vetis"
description = "Very Tiny Server with smol runtime"
readme = "README.md"
license = "MIT"
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version = "1.75.0"

[package.metadata.wix]
upgrade-guid = "76DF79DF-E1F9-40A7-89D1-3190562C7851"
path-guid = "FEA82F70-7E57-447F-A361-76FB5E25BA5F"
license = false
eula = false

[features]
default = [
  "http2",
  "rust-tls",
]

basic-auth = ["vetis/basic-auth"]
static-files = ["vetis/static-files"]
reverse-proxy = ["vetis/reverse-proxy", "dep:deboa-smol"]

rust-tls = ["futures-rustls", "rustls", "rustls-provider"]

interface = ["vetis/interface"]
__interface_asgi = ["interface", "asgi", "vetis-asgi/tokio-rt"]
__interface_fcgi = ["interface", "fcgi", "vetis-fcgi/tokio-rt"]
__interface_sapi = ["interface", "sapi", "vetis-sapi/tokio-rt"]
__interface_scgi = ["interface", "scgi", "vetis-scgi/tokio-rt"]
__interface_rack = ["interface", "rack", "vetis-rack/tokio-rt"]
__interface_rsgi = ["interface", "rsgi", "vetis-rsgi/tokio-rt"]
__interface_wsgi = ["interface", "wsgi", "vetis-wsgi/tokio-rt"]

asgi = []
fcgi = []
rack = []
rsgi = []
sapi = []
scgi = []
wsgi = []

rustls-provider = ["__rustls_awc_lc_rs"]
__rustls_awc_lc_rs = ["futures-rustls/aws-lc-rs", "quinn/rustls-aws-lc-rs"]
__rustls_ring = ["futures-rustls/ring", "quinn/rustls-ring"]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

http1 = [
  "hyper/http1",
  "hyper/server",
  "hyper-util/server",
  "hyper-util/http1",
]
http2 = [
  "hyper/http2",
  "hyper/server",
  "hyper-util/server",
  "hyper-util/http2",
]
http3 = [
  "hyper/server",
  "hyper-util/server",
  "dep:h3",
  "dep:h3-quinn",
  "quinn/runtime-smol",
  "hyper-body-utils/http3",
]

[dependencies]
async-lock = "3.4.1"
async-native-tls = { version = "0.5.0", features = ["runtime-async-std"], default-features = false }
async-signal = { version = "0.2.12", default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false }
blocking = { version = "1.6.2", optional = true, default-features = false }
bytes = "1.11.1"
clap = { version = "4.5.61", features = [
  "derive",
  "std",
], default-features = false }
crossfire = { version = "3.1.6", optional = true, default-features = false }
deboa = { path = "../../deboa/deboa" }
deboa-smol = { path = "../../deboa/deboa-smol", optional = true, default-features = false }
env_logger = "0.11.9"
futures-lite = { version = "2.6.1", default-features = false }
futures-rustls = { version = "0.26.0", optional = true, default-features = false }
futures-util = { version = "0.3.32" }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1.3.1"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.8.1", optional = true, default-features = false }
hyper-body-utils = { path = "../../hyper-body-utils", features = ["smol-rt"], default-features = false }
hyper-util = { version = "0.1.20", optional = true, default-features = false }
log = "0.4.28"
macro_rules_attribute = { version = "0.2.2", default-features = false }
mimalloc = "0.1.48"
mime = { version = "0.3.17", optional = true, default-features = false }
minimime = { version = "1.0.0", optional = true, default-features = false }
moka = { version = "0.12.14", optional = true, default-features = false }
parse_duration = { version = "2.1.1", optional = true, default-features = false }
peekable = { version = "0.4.1", features = ["future"], default-features = false }
quinn = { version = "*", optional = true, default-features = false }
radix_trie = "0.3.0"
rand = "0.9.2"
regex = { version = "1.12.3", optional = true, default-features = false }
rustls = { version = "0.23.37", optional = true, default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
signal-hook = { version = "0.4.3", default-features = false }
smol = { version = "2.0.2", default-features = false }
smol-hyper = { version = "0.1.1", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
socket2 = "0.6.3"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting"] }
url = "2.5.7"
vetis = { path = "../vetis", default-features = false }
vetis-asgi = { version = "0.1.0", path = "../interfaces/vetis-asgi", optional = true, default-features = false }
vetis-fcgi = { version = "0.1.0", path = "../interfaces/vetis-fcgi", optional = true, default-features = false }
vetis-rack = { version = "0.1.0", path = "../interfaces/vetis-rack", optional = true, default-features = false }
vetis-rsgi = { version = "0.1.0", path = "../interfaces/vetis-rsgi", optional = true, default-features = false }
vetis-sapi = { version = "0.1.0", path = "../interfaces/vetis-sapi", optional = true, default-features = false }
vetis-scgi = { version = "0.1.0", path = "../interfaces/vetis-scgi", optional = true, default-features = false }
vetis-wsgi = { version = "0.1.0", path = "../interfaces/vetis-wsgi", optional = true, default-features = false }

[dev-dependencies]
deboa = { path = "../../deboa/deboa" }
deboa-smol = { path = "../../deboa/deboa-smol" }
macro_rules_attribute = { version = "0.2.2", default-features = false }
smol = { version = "2.0.2", default-features = false }
smol-hyper = { version = "0.1.1", default-features = false }
smol-macros = { version = "0.1.1", default-features = false }
vetis-macros = { path = "../vetis-macros" }