[package]
name = "vetis-tokio"
version = "0.1.0-beta.6"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server with tokio runtime"
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "tokio", "rest-server"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.wix]
upgrade-guid = "76DF79DF-E1F9-40A7-89D1-3190562C7851"
path-guid = "FEA82F70-7E57-447F-A361-76FB5E25BA5F"
license = false
eula = false

[features]
default = ["http2", "rust-tls"]

auth = ["vetis/auth"]

rust-tls = ["tokio-rustls", "rustls", "rustls-provider"]

rustls-provider = ["__rustls_awc_lc_rs"]
__rustls_awc_lc_rs = ["futures-rustls/aws-lc-rs", "quinn/rustls-aws-lc-rs"]
__rustls_ring = ["futures-rustls/ring", "quinn/rustls-ring"]
__rustls_rustcrypto = ["dep:rustls-rustcrypto"]

http1 = ["hyper/http1", "hyper/server", "hyper-util/server", "hyper-util/http1"]
http2 = ["hyper/http2", "hyper/server", "hyper-util/server", "hyper-util/http2"]
http3 = [
  "dep:h3",
  "dep:h3-quinn",
  "hyper/server",
  "hyper-util/server",
  "hyper-body-utils/http3",
  "hyper-body-utils/generic",
  "quinn/runtime-tokio",
]

[dependencies]
async-lock = "3.4.1"
base64 = { version = "0.22.1", optional = true, default-features = false }
blocking = { version = "1.6.2", optional = true, default-features = false }
bytes = { version = "1.11.1", default-features = false }
clap = { version = "4.5.61", features = [
  "derive",
  "std",
], default-features = false }
crossfire = { version = "3.1.16", optional = true, default-features = false }
env_logger = "0.11.9"
futures-lite = { version = "2.6.1", optional = true, default-features = false }
futures-rustls = { version = "0.26.0", optional = true, default-features = false }
futures-util = { version = "0.3.32", default-features = false }
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1.4.2"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.10.1", optional = true, default-features = false }
hyper-body-utils = { workspace = true, default-features = false }
hyper-util = { version = "0.1.20", features = [
  "tokio",
], default-features = false }
log = "0.4.32"
mimalloc = "0.1.52"
moka = { version = "0.12.14", features = ["future"], default-features = false }
peekable = { version = "0.6.1", features = ["tokio"], default-features = false }
quinn = { version = "0.11.9", optional = true, default-features = false }
radix_trie = { version = "0.3.0", default-features = false }
rand = { version = "0.10.1", default-features = false }
regex = { version = "1.12.4", default-features = false }
rustls = { version = "0.23.40", optional = true, default-features = false }
rustls-rustcrypto = { version = "0.0.2-alpha", optional = true }
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
socket2 = "0.6.4"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting"] }
tokio = { version = "1.52.3", features = [
  "fs",
  "signal",
  "net",
  "rt-multi-thread",
], default-features = false }
tokio-rustls = { version = "0.26.0", optional = true, default-features = false }
tokio-util = { version = "0.7.18", features = ["io"], default-features = false }
typetag = "0.2.22"
url = "2.5.7"
vetis = { workspace = true, default-features = false }

[dev-dependencies]
deboa = { version = ">= 0.1.0-beta.24" }
deboa-tokio = { version = ">= 0.1.0-beta.14", default-features = false, features = [
  "http2",
  "rust-tls",
  "default-rustls-provider",
  "default-rustls-verifier",
] }
tokio = { version = "1.52.3", default-features = false, features = [
  "macros",
  "rt-multi-thread",
] }
vetis-macros = { workspace = true }
