[package]
name = "vetis"
version = "0.1.4-beta.9"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server"
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.wix]
upgrade-guid = "76DF79DF-E1F9-40A7-89D1-3190562C7851"
path-guid = "FEA82F70-7E57-447F-A361-76FB5E25BA5F"
license = false
eula = false

[features]
default = [
  "auth",
]

auth = ["argon2/password-hash", "argon2/alloc", "bcrypt/std", "base64"]

interface = []

[dependencies]
argon2 = { version = "0.5.3", optional = true, default-features = false }
async-lock = "3.4.1"
async-signal = { version = "0.2.12", optional = true, default-features = false }
base64 = { version = "0.22.1", optional = true, default-features = false }
bcrypt = { version = "0.19.1", optional = true, default-features = false }
blocking = { version = "1.6.2", optional = true, default-features = false }
bytes = "1.11.1"
cfg-if = "1.0.4"
clap = { version = "4.5.61", features = [
  "derive",
  "std",
], default-features = false }
crossfire = { version = "3.1.16", optional = true, default-features = false }
deboa = { version = "0.1.0-beta.11", optional = true, default-features = false }
env_logger = "0.11.9"
futures-lite = { version = "2.6.1", optional = true, default-features = false }
futures-util = "0.3.32"
h3 = { version = "0.0.8", optional = true, default-features = false }
h3-quinn = { version = "0.0.10", optional = true, default-features = false }
http = "1.4.2"
http-body-util = { version = "0.1.3" }
hyper = { version = "1.10.1", optional = true, default-features = false }
hyper-body-utils = { version = "0.1.7" }
hyper-util = { version = "0.1.20", optional = true, default-features = false }
log = "0.4.32"
macro_rules_attribute = { version = "0.2.2", optional = true, default-features = false }
mimalloc = "0.1.52"
mime = { version = "0.3.17", optional = true, default-features = false }
minimime = { version = "1.0.0", optional = true, default-features = false }
moka = { version = "0.12.14", optional = true, default-features = false }
parse_duration = { version = "2.1.1", optional = true, default-features = false }
peekable = { version = "0.6.1", optional = true, default-features = false }
quinn = { version = "0.11.9", optional = true, default-features = false }
radix_trie = "0.3.0"
rand = "0.9.2"
regex = { version = "1.12.4", optional = true, default-features = false }
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
signal-hook = { version = "0.4.3", optional = true, default-features = false }
socket2 = "0.6.4"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting"] }
typetag = "0.2.22"
url = "2.5.7"
