[package]
name = "vetis"
version = "0.1.4-beta.12"
edition.workspace = true
authors.workspace = true
repository.workspace = true
homepage.workspace = true
description = "Very Tiny Server"
readme = "README.md"
license.workspace = true
keywords = ["http", "networking", "server", "rest-server"]
publish = true
rust-version.workspace = true

[package.metadata.docs.rs]
all-features = true

[package.metadata.wix]
upgrade-guid = "76DF79DF-E1F9-40A7-89D1-3190562C7851"
path-guid = "FEA82F70-7E57-447F-A361-76FB5E25BA5F"
license = false
eula = false

[features]
default = []

[dependencies]
async-lock = "3.4.1"
bytes = "1.11.1"
futures-util = "0.3.32"
http = "1.4.2"
http-body-util = { version = "0.1.3" }
hyper-body-utils = { workspace = true, default-features = false }
log = "0.4.32"
radix_trie = "0.3.0"
rand = "0.10.1"
serde = { version = "1.0.226", features = ["derive"] }
serde_yaml_ng = "0.10.0"
socket2 = "0.6.4"
thiserror = "2.0.17"
time = { version = "0.3.41", features = ["formatting"] }
typetag = "0.2.22"
url = "2.5.7"
